The header was created with a carousel of images and a text

--- a/dochtml/home.html
+++ b/dochtml/home.html
@@ -13,9 +13,9 @@
 
 <body>
     <nav>
-        <div class="navbar">-->
-            <div class="image_navbar"><img id="logo" alt="logo" src="../img/image1.png"></div>-->
-            <div class="menu">-->
+        <div class="navbar">
+            <div class="image_navbar"><img id="logo" alt="logo" src="../img/image1.png"></div>
+            <div class="menu">
                 <a class="menu_item">ONG</a>
                 <a class="menu_item">ONG</a>
                 <a class="menu_item">ONG</a>
@@ -23,6 +23,46 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <div class="slideshow-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias sit in voluptas fugit, temporibus
+                    quisquam pariatur rerum explicabo necessitatibus facilis reprehenderit reiciendis cum porro.
+                    Ducimus, ex a. Adipisci, accusamus a.</p>
+            </div>
+            <img src="../img/1.jpg" style="width:100%; height: 100%">
+        </div>
+
+        <div class="mySlides fade">
+            <div class="slideshow-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias sit in voluptas fugit, temporibus
+                    quisquam pariatur rerum explicabo necessitatibus facilis reprehenderit reiciendis cum porro.
+                    Ducimus, ex a. Adipisci, accusamus a.</p>
+            </div>
+            <img src="../img/2.jpg" style="width:100%; height: 100%">
+
+        </div>
+
+        <div class="mySlides fade">
+            <div class="slideshow-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias sit in voluptas fugit, temporibus
+                    quisquam pariatur rerum explicabo necessitatibus facilis reprehenderit reiciendis cum porro.
+                    Ducimus, ex a. Adipisci, accusamus a.</p>
+            </div>
+            <img src="../img/3.jpg" style="width:100%; height: 100%">
+        </div>
+
+        <div style="text-align:center; margin-top: 10px">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+    </div>
+
+
+
 
 
     <script src="../functionalities/scripts.js"></script>
