--- a/dochtml/home.html
+++ b/dochtml/home.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="../styles/form.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -33,8 +34,7 @@
          
         </div>
         <a href="#cnt" class="menu_item">Contacto</a>
-        <a class="menu_item">Intoduce tu ONG</a>
-      </div>
+        <a class="menu_item" onclick="document.getElementById('id01').style.display='block'" >Introduce tu ONG</a>
     </div>
   </nav>
 
@@ -221,6 +221,37 @@
       <p>William Shakespeare</p>
     </div>
   </footer>
+
+ 
+    <div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" onclick="document.getElementById('id01').style.display='none'"  class="close" title="Close Modal">times;</span>
+    <form class="modal-content" action="/action_page.php">
+      <div class="container-modal">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required>
+  
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+  
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+  
+        <label>
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
+  
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+  
+        <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="submit" class="signup">Sign Up</button>
+        </div>
+      </div>
+    
+    </form>
 
   <script src="../functionalities/scripts.js"></script>
   <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
