--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/categories.css">
+    <link rel="stylesheet" href="./styles/categories.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Categorías</title>
 </head>
@@ -80,6 +80,6 @@
       </div>
     </div>
 
-<script src="../functionalities/categories.js"></script>
+<script src="./js/categories.js"></script>
 </body>
 </html>
