--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="../styles/styles.css">
-  <link rel="stylesheet" type="text/css" href="../styles/form.css">
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles/form.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
   <nav>
     <div class="navbar">
-      <div class="image_navbar"><img id="logo" alt="logo" src="../img/image1.png"></div>
+      <div class="image_navbar"><img id="logo" alt="logo" src="./img/image1.png"></div>
       <div class="menu">
         <a href="#how" class="menu_item">Quiénes Somos</a>
         <div class="dropdown">
@@ -45,7 +45,7 @@
         <p>" Siempre que dudes lo lejos que puedes llegar. Solo recuerda lo lejos que has llegado. Recuerda todo lo que
           has enfrentado, todas las batallas que has ganado y todos los temores que has superado..."</p>
       </div>
-      <img src="../img/1.png" style="width:100%; height: 100%">
+      <img src="./img/1.png" style="width:100%; height: 100%">
     </div>
 
     <div class="mySlides fade">
@@ -53,7 +53,7 @@
         <p> " Dentro de veinte años a partir de ahora te arrepentirás de las cosas que no hiciste, así que suelta las
           amarras y navega fuera de tu zona de confort, busca el viento en tus velas. Explora, Sueña, Descubre... "</p>
       </div>
-      <img src="../img/2.png" style="width:100%; height: 100%">
+      <img src="./img/2.png" style="width:100%; height: 100%">
 
     </div>
 
@@ -62,7 +62,7 @@
         <p>" Algún día todo tendrá perfecto sentido. Así que por ahora ríete de la confusión, sonríe a través de las
           lágrimas y sigue recordándote a ti mismo que todo sucede por una razón... "</p>
       </div>
-      <img src="../img/21.jpg" style="width:100%; height: 100%">
+      <img src="./img/21.jpg" style="width:100%; height: 100%">
     </div>
 
     <div
@@ -103,7 +103,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="../img/10.jpg  " alt="Jane" style="width:100%">
+          <img src="./img/10.jpg  " alt="Jane" style="width:100%">
           <div class="cards">
             <div class="card-h3">
               <h3>Familia</h3>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="card">
-        <img src="../img/17.jpg" alt="Mike" style="width:100%">
+        <img src="./img/17.jpg" alt="Mike" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3>Violencia de Género</h3>
@@ -125,7 +125,7 @@
 
 
       <div class="card">
-        <img src="../img/15.jpg" alt="John" style="width:100%">
+        <img src="./img/15.jpg" alt="John" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3>Adicciones</h3>
@@ -136,7 +136,7 @@
 
 
       <div class="card">
-        <img src="../img/18.jpg" alt="John" style="width:100%">
+        <img src="./img/18.jpg" alt="John" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3> Peronas en Situación de Calle</h3>
@@ -149,7 +149,7 @@
     <div class="row">
 
       <div class="card">
-        <img src="../img/12.jpg" alt="Jane" style="width:100%">
+        <img src="./img/12.jpg" alt="Jane" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3>Ollas Populares</h3>
@@ -161,7 +161,7 @@
 
 
       <div class="card">
-        <img src="../img/13.jpg" alt="Mike" style="width:100%">
+        <img src="./img/13.jpg" alt="Mike" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3> Refugios de Animales</h3>
@@ -173,7 +173,7 @@
 
 
       <div class="card">
-        <img src="../img/19.jpg" alt="John" style="width:100%">
+        <img src="./img/19.jpg" alt="John" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3>Dicriminación</h3>
@@ -183,7 +183,7 @@
       </div>
 
       <div class="card">
-        <img src="../img/img16.jpg" alt="John" style="width:100%">
+        <img src="./img/img16.jpg" alt="John" style="width:100%">
         <div class="cards">
           <div class="card-h3">
             <h3> Personas con Capacidades Diferentes</h3>
@@ -266,7 +266,7 @@
     
     </form>
 
-  <script src="../functionalities/scripts.js"></script>
+  <script src="./js/scripts.js"></script>
   <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
 
 </body>
